src/objects/npsp__DataImport__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Payment_Method__c</fullName>
        <inlineHelpText>Payment.npe01__Payment_Method__c</inlineHelpText>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Possible_Matches__c</fullName>
        <description>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</description>
        <inlineHelpText>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</inlineHelpText>
        <label>Payment Possible Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <description>The status of the import for this record, for example, Imported or Failed.</description>
        <inlineHelpText>The status of the import for this record, for example, Imported or Failed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Validated</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Error</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPSP Data Import</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>npsp__Dry_Run_Errors</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Error</value>
        </filters>
        <label>Dry Run - Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>npsp__Dry_Run_Validated</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Validated</value>
        </filters>
        <label>Dry Run - Validated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>npsp__Failed_Data_Imports</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed Data Imports</label>
    </listViews>
    <listViews>
        <fullName>npsp__Succesfully_Imported</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <label>Succesfully Imported</label>
    </listViews>
    <listViews>
        <fullName>npsp__To_Be_Imported</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>notEqual</operation>
            <value>Imported</value>
        </filters>
        <label>To Be Imported</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>